--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
           <ul class="navbar-nav ml-auto align-items-lg-center">
 
             <li class="nav-item">
-              <a class="nav-link" href="pages/homepage.html">Homepage</a>
+              <a class="nav-link" href="index.html">Homepage</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/about.html">About us</a>
@@ -71,7 +71,7 @@
             <!-- <a href="#" class="btn btn-danger btn-icon-only btn-zoom--hover rounded-circle">
               <span class="btn-inner--icon"><i class="fas fa-heart"></i></span>
             </a> -->
-            <span class="heading h4 ml-3 mb-0">研究方向</span>
+            <span class="heading h4 ml-3 mb-0">科研方向</span>
           </div>
         </div>
       </section>
@@ -99,19 +99,20 @@
         <div class="container">
           <div class="row cols-xs-space cols-sm-space align-items-center">
             <div class="col-md-6 order-md-2 ml-lg-auto">
-              <img src="assets/images/prv/img-2-1000x900.jpg" class="img-center img-fluid rounded z-depth-3">
+              <img src="assets/images/prv/depth.gif" class="img-center img-fluid rounded z-depth-3">
             </div>
             <div class="col-md-6 col-lg-5 order-md-1">
               <div class="pr-md-4">
                 <h3 class="heading h3">
                   光场深度估计
                 </h3>
-                <p class="lead text-gray mt-4">Every component and plugin is thoroughly documented with live examples and code blocks for easier use and customization—just like Bootstrap itself. Not comfortable diving that deep? No worries, you can get started by double clicking index.html!</p>
+                <p class="lead text-gray mt-4">算法利用多张不同视角的图像，测算出当前场景的深度情况</p>
               </div>
             </div>
           </div>
         </div>
       </section>
+
       <section class="slice slice-lg" data-delimiter="1">
         <div class="container">
           <div class="row cols-xs-space cols-sm-space align-items-center">
@@ -123,8 +124,63 @@
                 <h3 class="heading h3">
                   视角仿真
                 </h3>
-                <p class="lead text-gray mt-4">With Boomerang UI you get components and examples, including tons of variables that will help you customize this theme with ease.
+                <p class="lead text-gray mt-4">利用几张不同视角的图像，重建三维模型，构建出场景其他新视角的图像
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="slice slice-xl" >
+        <div class="container">
+          <div class="row cols-xs-space cols-sm-space align-items-center">
+            <div class="col-md-6 order-md-2 ml-lg-auto">
+              <img src="assets/images/prv/occ_removal.gif" class="img-center img-fluid rounded z-depth-3">
+            </div>
+            <div class="col-md-6 col-lg-5 order-md-1">
+              <div class="pr-md-4">
+                <h3 class="heading h3">
+                  光场去遮挡
+                </h3>
+                <p class="lead text-gray mt-4">算法利用多张不同视角的图像，去除场景中的遮挡物</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="slice slice-lg" data-delimiter="1">
+        <div class="container">
+          <div class="mb-md text-center">
+            <h3 class="heading h3">更多像素级视觉任务</h3>
+          </div>
+          <div class="row cols-xs-space cols-sm-space cols-md-space">
+            <div class="col-lg-4">
+              <div class="card border-0">
+                <img width="800" height="600" class="rounded z-depth-3 img-fluid" src="assets/images/prv/blur.gif" alt="Image description">
+                <div class="pt-4">
+                  <h5 class="card-title">模糊去除</h5>
+                  <p class="card-text">Each theme comes with updates for the life of the theme. This means you'll never pay for any bug-fixes and compatibility upgrades for your theme, ever.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card border-0">
+                <img  width="800" height="600" class="rounded z-depth-3 img-fluid" src="assets/images/prv/reflection.gif" alt="Image description">
+                <div class="pt-4">
+                  <h5 class="card-title">反射分离</h5>
+                  <p class="card-text">All our themes have three simple licenses. Free, Multiple and Exteneded Use license are availabled and you can learn more <a href="#">here</a>.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card border-0">
+                <img class="rounded z-depth-3 img-fluid" src="assets/images/prv/img-1-800x600.jpg" alt="Image description">
+                <div class="pt-4">
+                  <h5 class="card-title">光场去噪(雨)</h5>
+                  <p class="card-text">We're here to help with your Boomerang UI questions. Shoot us an email at support@webpixels.io and we'll get back to you ASAP.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -138,16 +194,15 @@
               <div class="col-lg-7">
                 <div class="text-center">
                   <h1 class="heading h3">
-                    Curious about what you get in the FREE version?
+                    近年科研成果
                   </h1>
                   <p class="lead lh-180 mt-4">
-                    One thing is for sure. You will be impressed of how much you receive with this free version of Boomerang UI. We offer more than any other UI kit has offered before. This is our way of showing that we are here to deliver, day by day, for a better web experience.
+                    近三年发表CCF A类会议论文（AAAI\ IJCAI\ ACM MM）4篇；
+                    <br>
+                    IEEE Trans类期刊论文(TIP\ TCI) 5篇；  
                   </p>
                   <div class="btn-container mt-5">
-                    <a href="#" class="btn btn-primary">
-                      Download FREE
-                    </a>
-                    <a href="#" class="btn btn-link">See all features</a>
+                    <a href="#" class="btn btn-link">See all paper</a>
                   </div>
                 </div>
               </div>
@@ -155,7 +210,9 @@
           </div>
         </div>
       </section>
-      <section class="slice slice-xl pb-5">
+
+      
+      <!-- <section class="slice slice-xl pb-5">
         <div class="container">
           <div class="row align-items-center mb-lg-lg">
             <div class="col-lg-4">
@@ -227,7 +284,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="slice slice-lg">
         <div class="container">
           <div class="mb-md text-center">
@@ -503,42 +560,7 @@
           </div>
         </div>
       </section>
-      <section class="slice slice-lg">
-        <div class="container">
-          <div class="mb-md text-center">
-            <h3 class="heading h3">Free updates and support</h3>
-          </div>
-          <div class="row cols-xs-space cols-sm-space cols-md-space">
-            <div class="col-lg-4">
-              <div class="card border-0">
-                <img class="rounded z-depth-3 img-fluid" src="assets/images/prv/img-3-800x600.jpg" alt="Image description">
-                <div class="pt-4">
-                  <h5 class="card-title">Free updates</h5>
-                  <p class="card-text">Each theme comes with updates for the life of the theme. This means you'll never pay for any bug-fixes and compatibility upgrades for your theme, ever.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="card border-0">
-                <img class="rounded z-depth-3 img-fluid" src="assets/images/prv/img-2-800x600.jpg" alt="Image description">
-                <div class="pt-4">
-                  <h5 class="card-title">Licenses</h5>
-                  <p class="card-text">All our themes have three simple licenses. Free, Multiple and Exteneded Use license are availabled and you can learn more <a href="#">here</a>.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="card border-0">
-                <img class="rounded z-depth-3 img-fluid" src="assets/images/prv/img-1-800x600.jpg" alt="Image description">
-                <div class="pt-4">
-                  <h5 class="card-title">Technical support</h5>
-                  <p class="card-text">We're here to help with your Boomerang UI questions. Shoot us an email at support@webpixels.io and we'll get back to you ASAP.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      
       <section class="slice">
         <div class="container">
           <div class="mb-md text-center">
@@ -668,3 +690,8 @@
     <script src="assets/js/theme.js"></script>
   </body>
 </html>
+<style>
+  .img_cut{
+    position: relative;
+  }
+</style>
